--- a/src/app/employee/employee.component.html
+++ b/src/app/employee/employee.component.html
@@ -84,7 +84,7 @@
                         </div>
                         <div class="col-lg-2 col-md-12 col-sm-12 col-sm-12">
                             <div class="col-lg-12 col-md-12 col-sm-12 col-sm-12">                              
-                                <input type="file" accept="image/*" #photo name="photo" value="Photo" class="file-input" id="imageInput" ng2FileSelect [uploader]="uploader"
+                                <input type="file" accept="image/*" #photo name="photo" value="Photo" class="file-input" id="imageInput"
                                        (change)="imagePreview($event)" [disabled]="inputDisabled" />
                             </div>
                             <div>
