--- a/src/app/job-allocations/job-allocations.component.scss
+++ b/src/app/job-allocations/job-allocations.component.scss
@@ -13,6 +13,16 @@ table{
     }
 }
 
+
+.job-summary-strip{   
+    font-size: 16px;
+    padding: 3px 10px;
+    border-radius: 20px;
+    color: white;
+    font-family: roboto;
+    margin: 0 5px;
+}
+
 .split-job-details{
     background-color:rgba(235, 237, 125, 1) 
 }
