--- a/src/app/client-licenses/client-licenses.component.html
+++ b/src/app/client-licenses/client-licenses.component.html
@@ -11,7 +11,7 @@
 
                 <div class="col-lg-12 col-md-12 col-sm-12 mbottom5 ofs">
                     <table>
-                        <thead (click)="sort($event)">
+                        <thead>
                             <tr table-header>
                                 <th>Location</th>
                                 <th>Key</th>
